tests/errors/type_check/declaration/validate_undeclared_enum_payload_type.err.expected
error: at 1:10: [TC-InvalidDeclaredType] In enum 'E', variant 'A': Use of undeclared type 'Nope'
   |
 1 | enum E { A: Nope }
   |          ^^^^^^^
